--- a/client/src/pages/sufiyan/styles/Main.css
+++ b/client/src/pages/sufiyan/styles/Main.css
@@ -20,8 +20,8 @@ main {
   }
   
   .main__greeting > h1 {
-    font-size: 24px;
-    color: #2e4a66;
+    font-size: 30px;
+    color: #f45f02;
     margin-bottom: 5px;
   }
   
