--- a/client/src/pages/sufiyan/pages/nestedPages/Sidebar.css
+++ b/client/src/pages/sufiyan/pages/nestedPages/Sidebar.css
@@ -8,11 +8,15 @@
   .body_container {
     flex: 1;
   }
+  .sideContainerVariants{
+    width: 5rem
+  }
   .sidebar_container {
     height: 100vh;
     position: sticky;
     top: 0;
     left: "50px";
+    min-width: 5rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -20,6 +24,7 @@
   .sidebar {
     display: flex;
     width: 20rem;
+    min-width: 5rem;
     height: 100%;
     justify-content: start;
     align-items: start;
