--- a/client/src/pages/monu/styles/Card.css
+++ b/client/src/pages/monu/styles/Card.css
@@ -1,6 +1,6 @@
 .our_profile_card{
     position: relative;
-    width: 320px;
+    width: 230px;
     height: 400px;
     background: linear-gradient(#f45f02,#f45f02 30%,#151515 30%,#151515);
     border-radius: 20px;
@@ -12,8 +12,8 @@
 }
 .papa{
     position: relative;
-    width: 330px;
-    height: 410px;
+    width: 234px;
+    height: 404px;
     box-shadow:  16px 14px 12px rgba(0, 0, 0, 0.24);
     overflow: hidden;
     display: flex;
@@ -22,6 +22,31 @@
     z-index: 4;
     border-radius: 20px;
 }
+@media screen and (max-width: 992px) {
+    .our_profile_card{
+        width: 300px;
+    }
+    .papa{
+        width: 304px;
+    }
+  }
+  @media screen and (max-width: 1300px) {
+    .our_profile_card{
+        width: 300px;
+    }
+    .papa{
+        width: 304px;
+    }
+  }
+  /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .our_profile_card{
+        width: 330px;
+    }
+    .papa{
+        width: 340px;
+    }
+  }
 .papa::before{
     position: absolute;
     content: "";
@@ -57,15 +82,14 @@
         transform:rotate(-360deg)
     }
 }
-.our_profile_card:hover .imgbx{
-    transform: translateY(-80px) scale(0.5);
-}
+
 .our_profile_card .imgbx{
 position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
+left: 50%;
+top: 50%;
+transform: translate(-50%,-90%);
+width: 70%;
+height: 50%;
 transition: 0.5s;
 z-index: 10;
 border-radius: 20px;
@@ -73,32 +97,32 @@ overflow: hidden;
 }
 .our_profile_card  .Our_content{
 position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
+left: 50%;
+top: 50%;
+transform: translate(-50%,0%);
+width: 90%;
+height: 60%;
 display: flex;
 justify-content: center;
 align-items: flex-end;
 padding-bottom: 30px; 
-transform: translateY(100%);
 transition: 0.5s;
 }
-.our_profile_card:hover  .Our_content{
-    transform: translateY(0);
-    }
+
 .our_profile_card  .Our_content .Our_details{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    padding-bottom: 30px; 
+    padding-bottom: 50px; 
  }
     .our_profile_card  .Our_content .Our_details span{
-        font-size: 0.8em;
-        font-weight: 400;
+        font-size: 0.7em;
+        font-weight: 450;
         color: #f45f02;
+        margin-top: 5px;
+        margin-bottom: 5px;
 }
 .our_social_icons{
     position: relative;
@@ -106,13 +130,13 @@ transition: 0.5s;
     margin-top: 5px;
 }
 .our_social_icons li{
-   
+   margin: 5px;
     list-style: none;
-    margin: 4px;
 }
 .our_social_icons li a{
-   width: 45px;
-   height: 45px;
+    margin-left: 5px;
+   width: 35px;
+   height: 35px;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -122,9 +146,10 @@ transition: 0.5s;
    color:#fff ;
    transition: 0.5s;
    text-decoration: none;
-   
+   padding: 9px;
 }
 .our_social_icons li a:hover{
     transform: rotate(360deg);
     background: #f45f02;
+   cursor: pointer;
  }
