--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@300;400;500;600;800&display=swap');
 
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;1,300&display=swap');
 
+*{
+  font-family: 'Poppins'
+}
+ 
 .App {
   text-align: center;
 }
